--- a/public/locales/he/common.json
+++ b/public/locales/he/common.json
@@ -209,6 +209,7 @@
       "main": "בית",
       "about": "אודות",
       "gynecology": "גינקולוגיה",
+      "surgery": "כירורגיה",
       "course": "קורסים",
       "media": "מדיה",
       "story": "סיפורים",
