--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -215,6 +215,7 @@
             "main": "Главная",
             "about": "О нас",
             "gynecology": "Гинекология",
+            "surgery": "Хирургия",
             "course": "Курсы",
             "media": "Медиа",
             "story": "Истории",
