--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -11,7 +11,9 @@
         "aboutItems": {
             "drSergeTunitski": "Др. Сергей Туницкий",
             "clinicTeam": "Клиника и наша команда",
-            "requestAppointment": "Записаться на прием",
+            "inPersonConsultation": "Очная консультация",
+            "onlineConsultation": "Онлайн консультация",
+            "secondOpinion": "Второе мнение",
             "preparation": "Подготовка",
             "pricesPayment": "Цены и оплата",
             "medicalTourism": "Медицинский туризм",
@@ -117,7 +119,7 @@
         "contactInfo": "Контактная информация",
         "getInTouch": "Свяжитесь с нами",
         "formTitle": "Запишитесь на консультацию удобным способом",
-        "formPromo": "При записи онлайн прямо сейчас — скидка 10%, консультация от 500 - 800 $ + УЗИ бесплатно",
+        "formPromo": "При записи прямо сейчас — скидка 10% и УЗИ бесплатно. 1. Очная консультация от 400 до 720 $. 2. Онлайн-консультация от 300 до 500 $. 3. Второе мнение от 500 до 900 $",
         "formDisclaimer": "Информация не является публичной офертой",
         "name": "Имя",
         "firstName": "Имя",
@@ -277,6 +279,21 @@
         "polyps": {
             "title": "Полипы",
             "description": "Удаление эндометриальных и цервикальных полипов с помощью гистероскопических и других малоинвазивных хирургических техник."
+        },
+        "cinThree": {
+            "title": "CIN III",
+            "description": "CIN III (тяжелая дисплазия шейки матки)"
+        }
+    },
+    "consultation": {
+        "inPersonConsultation": {
+            "title": "Очная консультация"
+        },
+        "onlineConsultation": {
+            "title": "Онлайн-консультация"
+        },
+        "secondOpinion": {
+            "title": "Второе медицинское мнение"
         }
     },
     "gynecologyPlanned": {
