--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -243,7 +243,7 @@
     "appointmentText": "Thank you for your interest in booking an appointment with Dr. Serge Tunitski. Please fill out the form below and we will contact you shortly to confirm your appointment."
   },
   "trustCareBanner": {
-    "title": "Trust and care — your source of peace and health"
+    "title": "Trust and care - your source of peace and health"
   },
   "gynecology": {
     "title": "Gynecological Surgery",
