--- a/public/locales/he/common.json
+++ b/public/locales/he/common.json
@@ -113,7 +113,7 @@
     "contactInfo": "פרטי קשר",
     "getInTouch": "צור קשר",
     "formTitle": "קבע ייעוץ בדרך הנוחה לך",
-    "formPromo": "הזמינו עכשיו וקבלו הנחה של \u200E10%\u200E ובדיקת אולטרסאונד חינם: 1. ייעוץ פרונטלי \u200E400–720\u200E דולר,2. ייעוץ אונליין \u200E300–500\u200E דולר,3. חוות דעת שנייה \u200E500–900\u200E דולר.",
+    "formPromo": "הזמינו עכשיו וקבלו הנחה של \u200E10%\u200E ובדיקת אולטרסאונד חינם: 1. ייעוץ פרונטלי \u200Eמ־1200 עד 1400\u200E  ש״ח,2. ייעוץ אונליין \u200Eמ־800 עד 1000 \u200E ש״ח,3. חוות דעת שנייה \u200Eמ־1000 עד 1200 \u200E ש״ח.",
     "formDisclaimer": "המידע אינו מהווה הצעה ציבורית",
     "name": "שם",
     "firstName": "שם פרטי",
