--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -445,5 +445,9 @@
             "title": "🎯 ملفات تعريف الارتباط التسويقية",
             "description": "الإعلانات وإعادة الاستهداف (Facebook و Google Ads)"
         }
+    },
+    "whatsappWidget": {
+        "tooltip": "هل يمكننا المساعدة؟ راسلنا!",
+        "message": "مرحباً! أود الاستفسار عن إمكانية استشارة عبر الإنترنت مع الدكتور تونيتسكي. سؤالي: "
     }
 }
