--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -479,5 +479,9 @@
             "title": "🎯 Маркетинговые cookies",
             "description": "Реклама и ретаргетинг (Facebook, Google Ads)"
         }
+    },
+    "whatsappWidget": {
+        "tooltip": "Вам помочь? Напишите нам!",
+        "message": "Здравствуйте! Я хотел(а) бы узнать о возможности онлайн-консультации с доктором Туницким. Мой вопрос: "
     }
 }
