--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,4 +1,8 @@
 {
+  "homePage": {
+    "seoTitle": "Clinic of Dr. Serge Tunitski - Leading Gynecology and Surgery in Israel",
+    "seoDescription": "Expert medical care in gynecology and surgery by Dr. Serge Tunitski. Advanced treatments, personalized approach, modern clinic in Israel."
+  },
   "navigation": {
     "home": "Home",
     "about": "About",
