--- a/public/locales/he/common.json
+++ b/public/locales/he/common.json
@@ -1,4 +1,8 @@
 {
+  "homePage": {
+    "seoTitle": "מרפאת ד\"ר סרג' טוניצקי - גינקולוגיה וכירורגיה מובילה בישראל",
+    "seoDescription": "טיפול רפואי מומחה בגינקולוגיה וכירורגיה על ידי ד\"ר סרג' טוניצקי. טיפולים מתקדמים, גישה אישית, מרפאה מודרנית בישראל."
+  },
   "navigation": {
     "home": "בית",
     "about": "אודות",
