--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -1,4 +1,8 @@
 {
+    "homePage": {
+        "seoTitle": "Клиника Доктора Сергея Туницкого - Ведущая гинекология и хирургия в Израиле",
+        "seoDescription": "Экспертная медицинская помощь в гинекологии и хирургии от доктора Сергея Туницкого. Передовые методы лечения, индивидуальный подход, современная клиника в Израиле."
+    },
     "navigation": {
         "home": "Главная",
         "about": "О нас",
